--- a/src/components/common/modal/field-charts-modal.scss
+++ b/src/components/common/modal/field-charts-modal.scss
@@ -18,9 +18,9 @@
   box-shadow: util.rem(0) util.rem(0) util.rem(25) map.get(color.$colorMap, dark-mode-grey);
   margin-left: 15%;
   margin-right: 9%;
-  width: 81%;
+  width: 80%;
   height: util.rem(380);
-  bottom: 5%;
+  bottom: 2%;
   left: 0;
   right: 0;
 
